--- a/Styles_Y.css
+++ b/Styles_Y.css
@@ -438,13 +438,21 @@ nav:before {
 
 
 /* -- Part 03 -------------------------------------------------------------------- */
-.test {
+.Stats {
   background: url('./Resources/Yacine/Banner_Background_02.jpg') no-repeat;
   background-size: cover;
   height: 600px;
   position: relative;
   left: 0;
   right: 0;
+}
+
+.Stats:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
 }
 /* -- End Part 03 -------------------------------------------------------------------- */
 
