--- a/Styles_Y.css
+++ b/Styles_Y.css
@@ -1,4 +1,4 @@
-/* -- Navigation Bar -------------------------------------------------------------------- */
+/* -- Fonts-------------------------------------------------------------------- */
 @import 'https://fonts.googleapis.com/css?family=Pathway+Gothic+One|Roboto:300,400,500,700';
 @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
 
@@ -11,7 +11,10 @@ html {
   font-family: "FontSansSmall-Regular", sans-serif;
   font-weight: 600;
 }
+/* -- End Fonts-------------------------------------------------------------------- */
 
+
+/* -- Navigation Bar -------------------------------------------------------------------- */
 .hero {
   min-width: 1024px;
   min-height: 600px;
@@ -268,13 +271,10 @@ nav:before {
 
 /* Heading */
 .hero-heading {
-  width: 700px;
   text-align: center;
   position: absolute;
   z-index: 1;
   top: 300px;
-  left: 0;
-  right: 50%;
   margin: auto;
 }
 
@@ -282,6 +282,7 @@ nav:before {
   font-family: 'Patrick Hand' ,cursive;
   font-weight: 400;
   font-size: 50px;
+  width: 700px;
   text-transform: uppercase;
   color: #FFFFFF;
   z-index: -2;
@@ -303,7 +304,9 @@ nav:before {
   font-family: 'Patrick Hand' ,cursive;
   font-size: 40px;
   font-weight: 400;
+  width: 340px;
   color: #FFFFFF;
+  margin-left: 26%;
   z-index: -2;
 }
 
@@ -337,9 +340,9 @@ nav:before {
   position: relative;
   text-align: center;
   color:#000000;
-  width:95%;
+  width:90%;
   top: 90px;
-  left:30px;
+  left:5%;
   font-family: 'Patrick Hand' ,cursive;
   font-size: 30px;
   font-weight: 400;
@@ -443,8 +446,7 @@ nav:before {
   background-size: cover;
   height: 600px;
   position: relative;
-  left: 0;
-  right: 0;
+  z-index: 1;
 }
 
 .Stats:after {
@@ -452,7 +454,83 @@ nav:before {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(0deg, rgba(0, 0, 0, 1) 25%, rgba(0, 0, 0, 0) 100%);
+  z-index: -1;
+}
+
+.Stats h1 {
+  position: absolute;
+  text-align: center;
+  color:#FFFFFF;
+  top: 70px;
+  margin: auto;
+  left: 0;
+  right: 0;
+  font-family: 'Patrick Hand' ,cursive;
+  font-size: 60px;
+  font-weight: 400;
+}
+
+.Stats h2{
+  position: absolute;
+  text-align: center;
+  color:#FFFFFF;
+  width:90%;
+  top: 180px;
+  left: 5%;
+  font-family: 'Patrick Hand' ,cursive;
+  font-size: 30px;
+  font-weight: 400;
+}
+
+.Stats ul {
+  position: absolute;
+  top: 325px;
+  width: 100%;
+  align-items:center;
+}
+
+.Stats li {
+  display:block;
+  width:18%;
+  float:left;
+  margin-left:5.75%;
+  border: 2px solid #79be21;
+  border-radius: 8px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  transition: transform 1s !important;
+  align-items: center;
+  text-align: center;
+}
+
+.Stats li:hover {
+  transition: all .2s ease !important;
+  transform: translate(0px, -30px) !important;
+}
+
+.Stats h3 {
+  text-align: center;
+  margin: 15px;
+  color:#79be21;
+  font-family: 'Patrick Hand' ,cursive;
+  font-size: 30px;
+  font-weight: 400;
+}
+
+.Stats h4 {
+  display:block;
+  text-align: center;
+  color:#FFFFFF;
+  font-family: 'Patrick Hand' ,cursive;
+  font-size: 20px;
+  font-weight: 400;
+  text-transform: capitalize;
+}
+
+.Stats img {
+  height: 60px;
+  width: 60px;
 }
 /* -- End Part 03 -------------------------------------------------------------------- */
 
