--- a/Sign In Workplace/Styles_Y_Sign_In.css
+++ b/Sign In Workplace/Styles_Y_Sign_In.css
@@ -7,6 +7,10 @@ html {
   font-family: "FontSansSmall-Regular", sans-serif;
   font-weight: 600;
 }
+
+* {
+	box-sizing: border-box;
+}
 /* -- End Fonts-------------------------------------------------------------------- */
 
 
@@ -15,7 +19,7 @@ html {
   position: absolute;
   top: 50px;
   width: 500px;
-  height: 900px;
+  height: 1220px;
   margin: auto;
   left: 0;
   right: 0;
@@ -23,27 +27,76 @@ html {
   border-radius: 8px;
   background-color: #f3f0eb;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-  text-align: center;
 }
 
 .sign_in h1 {
-  color:#2c5f2d;
+  color:#79be21;
   font-family: 'Patrick Hand' ,cursive;
   font-size: 30px;
   font-weight: 400;
+  margin-left: 4em;
 }
 
-.sign_in h2 {
-  color:#2c5f2d;
+.log_in {
+  position: absolute;
+  top: 50px;
+  width: 500px;
+  height: 395px;
+  margin: auto;
+  left: 0;
+  right: 0;
+  border: 2px solid #f3f0eb;
+  border-radius: 8px;
+  background-color: #f3f0eb;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+.log_in h1 {
+  color:#79be21;
   font-family: 'Patrick Hand' ,cursive;
-  font-size: 20px;
+  font-size: 30px;
   font-weight: 400;
+  margin-left: 4em;
 }
 
-.Drag_Drop {
-  border : 2px solid black;
-  height: 16em;
-  width: 20em;
+.Avatar_Drop {
+  width: 200px;
+  height: 200px;
+  margin-bottom: 20px;
+  margin-left: 9em;
+}
+
+.Certificate_Drop {
+  width: 100%;
+  height: 250px;
+  margin-bottom: 10px;
+  margin-left: 15%;
+}
+
+.form_check_input {
+  color:#79be21;
+  font-family: 'Patrick Hand' ,cursive;
+  font-size: 17px;
+  font-weight: 400;
+  margin-left: 97px;
+  margin-top: 10px;
+}
+
+.form_check_input a{
+  text-decoration: none;
+}
+
+.form_check_input_log_in {
+  color:#79be21;
+  font-family: 'Patrick Hand' ,cursive;
+  font-size: 17px;
+  font-weight: 400;
+  margin-left: 185px;
+  margin-top: 10px;
+}
+
+.form_check_input_log_in a{
+  text-decoration: none;
 }
 /* -- Inputs -------------------------------------------------------------------- */
 input {
@@ -95,7 +148,7 @@ iframe {
 }
 /* -- All Form Placeholders -------------------------------------------------------------------- */
 .login100-form {
-  width: 290px;
+  width: 380px;
 }
 /* -- Text Paceholders -------------------------------------------------------------------- */
 .wrap-input100 {
@@ -103,6 +156,7 @@ iframe {
   width: 100%;
   z-index: 1;
   margin-bottom: 10px;
+  left: 15%;
 }
 
 .input100 {
@@ -116,7 +170,7 @@ iframe {
   background: #e6e6e6;
   height: 50px;
   border-radius: 25px;
-  padding: 0 30px 0 68px;
+  padding: 0 30px 0 60px;
 }
 /* -- Icons  -------------------------------------------------------------------- */
 .symbol-input100 {
@@ -134,7 +188,7 @@ iframe {
   left: 0;
   width: 100%;
   height: 100%;
-  padding-left: 35px;
+  padding-left: 30px;
   pointer-events: none;
   color: #666666;
 
@@ -145,12 +199,12 @@ iframe {
 }
 
 .input100:focus + .focus-input100 + .symbol-input100 {
-  color: #57b846;
-  padding-left: 28px;
+  color: #79be21;
+  padding-left: 20px;
 }
-/* -- Log In Button -------------------------------------------------------------------- */
+/* -- Submit Button -------------------------------------------------------------------- */
 .container-login100-form-btn {
-  width: 100%;
+  width: 50%;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -158,7 +212,8 @@ iframe {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding-top: 20px;
+  margin-left: 40%;
+  margin-top: 80px;
 }
 
 .login100-form-btn {
@@ -188,9 +243,9 @@ iframe {
 }
 
 .login100-form-btn:hover {
-  background: #333333;
+  background: #202020;
 }
-/* -- Positions Of Form Placeholders + Validations -------------------------------------------------------------------- */
+/* -- Positions Validations Messeges -------------------------------------------------------------------- */
 .validate-input {
   position: relative;
 }
@@ -202,7 +257,7 @@ iframe {
   background-color: white;
   border: 1px solid #c80000;
   border-radius: 13px;
-  padding: 4px 25px 4px 10px;
+  padding: 4px 32px 4px 10px;
   top: 50%;
   -webkit-transform: translateY(-50%);
   -moz-transform: translateY(-50%);
@@ -241,7 +296,7 @@ iframe {
   -ms-transform: translateY(-50%);
   -o-transform: translateY(-50%);
   transform: translateY(-50%);
-  right: 13px;
+  right: 20px;
 }
 
 .alert-validate:hover:before {
@@ -258,7 +313,8 @@ iframe {
 /* -- End Sign In Form -------------------------------------------------------------------- */
 
 
-/* -- Drag & Drop --------------------------------------------------------------------
+/* -- End  -------------------------------------------------------------------- */
+
 .filepond--drop-label {
   color: #4c4e53;
 }
@@ -281,7 +337,7 @@ iframe {
 .filepond--drip-blob {
   background-color: #7f8a9a;
 }
--- End Drag & Drop -------------------------------------------------------------------- */
+/* -- End  -------------------------------------------------------------------- */
 
 
 /* -- Scroll Bar Style -------------------------------------------------------------------- */
