--- a/projets/helpme/template/Accueil.html
+++ b/projets/helpme/template/Accueil.html
@@ -251,23 +251,26 @@
       <h1 data-aos="fade-up" data-aos-once="true" data-aos-offset="160" data-aos-duration="1000">Commencez à <span style="color:#2c5f2d;">aider</span> les gens maintenant !</h1>
       <h2 data-aos="fade-up" data-aos-once="true" data-aos-offset="70" data-aos-duration="1000">Voici des exemples des cas urgents que nous avons ,
         choisissez celui qui vous convient et vous pouvez lui faire un don en un seul clic.</h2>
+
       <div data-aos-id="cards" data-aos="fade-up" data-aos-once="true" data-aos-offset="400" data-aos-duration="1000">
-        <div class="my-slider">
+<div class="my-slider">
+
+         {% for cas in cass %}
           <div class="Belt">
-            <img class="img_card" src="{% static './person.png' %}">
-            <h1>Titre</h1>
-            <h2>123 456 789 123 456 789 123 456 789 123 456 789
-            123 456 789 123 456 789 123 456 789 123 456 789 123 456 789
-            123 456 789 123 456 789 123 456 789 123 456 789 123 456 789
-            123 456 789 123 456 789 123 456</h2>
+            <img class="img_card" src="{{ cas.img.url }}">
+            <h1>{{cas.titre}} </h1>
+            <h2>{{cas.resumé}}</h2>
             <div class="progress-wrap progress" data-progress-percent="44">44 %
               <div class="progress-bar progress"></div>
             </div>
-            <button type="button" class="btn_card" style="cursor: pointer;">Détails</button>
+            <button type="button" class="btn_card"  style="cursor: pointer;" ><a href="{% url 'details' cas.id %}"> Détails </a></button>
           </div>
-        </div>
+         {% endfor %}
+</div>
+
       </div>
     </div>
+
   </section>
   <!-- End Part 05 -------------------------------------------------------------------->
 
@@ -361,7 +364,7 @@
             <h1>Liens</h1>
             <hr class="red">
             <div class="Links">
-              <h2><a href="{% url 'Accueil' %}" >Accueil</a></h1>
+              <h2><a href="{% url 'Accueil' %}" >Accueil</a></h2>
               <h2><a href="#" >Associations</a></h2>
               <h2><a href="{% url 'education' %}" >Catégorie - Éducation</a></h2>
               <h2><a href="{% url 'Sante' %}" >Catégorie - Santé</a></h2>
