--- a/projets/helpme/template/autres.html
+++ b/projets/helpme/template/autres.html
@@ -89,7 +89,7 @@
                 {% endif %}
                 {% for i in cass.paginator.page_range %}
                 {% if cass.number == i %}
-                <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+                <li class="active"><span>{{ i }} <span class="sr-only"></span></span></li>
                 {% else %}
                 <li><a href="?page={{ i }}">{{ i }}</a></li>
                 {% endif %}
