--- a/projets/helpme/template/education.html
+++ b/projets/helpme/template/education.html
@@ -89,7 +89,7 @@
                 {% endif %}
                 {% for i in cass.paginator.page_range %}
                 {% if cass.number == i %}
-                <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+                <li class="active"><span>{{ i }} <span class="sr-only"></span></span></li>
                 {% else %}
                 <li><a href="?page={{ i }}">{{ i }}</a></li>
                 {% endif %}
@@ -111,7 +111,7 @@
           <div class="carousel-item"></div>
           <div class="carousel-item"></div>
 
-        </div>
+
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
